@@ -3,6 +3,7 @@ Revision 0.2.8, released XX-XX-2019
 -----------------------------------
 
 - Improve test routines for modules that use certificate extensions
+- Improve test for RFC3709 with a real world certificate
 - Added RFC7633 providing TLS Features Certificate Extension
 - Added RFC7229 providing OIDs for Test Certificate Policies
 - Added tests for RFC3280, RFC3281, RFC3852, and RFC4211
